# ledMatrix

./: .gitignore  Cargo.toml
scripts_und_systemd/: buttonscript.service  scriptstart.sh  start_ledmatrix.service
src/: calender.rs  main.rs  secrets.rs  weather.rs
