[package]
name = "ledMatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
image = "0.24.5"
minicaldav = "0.6.0"
url = "2.3.1"
ureq= "*"
# rpi-led-matrix = {version = "0.4.0"}#, features=["c-stubs"]}
rpi-led-panel = "0.2.0"